# viper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _config.yml  benchmark.cpp  benchmark.hpp  index.md  main.cpp  pipeline.sh  playground.cpp  redo.sh
_layouts/: default.html
assets/css/: style.scss
benchmark/: CMakeLists.txt  access_pattern_bm.cpp  all_ops_benchmark.cpp  benchmark.cpp  benchmark.hpp  benchmark_data_types.hpp  breakdown_bm.cpp  convert_ycsb.py  generate_ycsb.sh  key_value_size_bm.cpp  latency_bw_bm.cpp  pmemkv.sh  reclaim_bm.cpp  recovery_bm.cpp  update_bm.cpp  util_benchmark.cpp  variable_size_bm.cpp  ycsb_bm.cpp
benchmark/config/: rocksdb.conf  ycsb_1090_uniform.conf  ycsb_1090_zipf.conf  ycsb_5050_uniform.conf  ycsb_5050_zipf.conf  ycsb_prefill.conf
benchmark/fixtures/: cceh_fixture.hpp  common_fixture.cpp  common_fixture.hpp  crl.hpp  crl_fixture.hpp  dash_fixture.cpp  dash_fixture.hpp  dram_map_fixture.cpp  dram_map_fixture.hpp  faster_fixture.cpp  faster_fixture.hpp  hybrid_map_fixture.cpp  hybrid_map_fixture.hpp  pmem_kv_fixture.cpp  pmem_kv_fixture.hpp  pmem_log_fixture.cpp  pmem_log_fixture.hpp  pmem_map_fixture.cpp  pmem_map_fixture.hpp  rocksdb_fixture.cpp  rocksdb_fixture.hpp  tbb_fixture.hpp  utree.hpp  utree_fixture.hpp  viper_fixture.cpp  viper_fixture.hpp  ycsb_common.cpp  ycsb_common.hpp
benchmark/fixtures/ignore/: all_ops_benchmark.cpp  cceh_fixture.hpp  crl.hpp  crl_fixture.hpp  dash_fixture.hpp  faster_fixture.hpp  pmem_kv_fixture.hpp  rocksdb_fixture.hpp  tbb_fixture.hpp  utree.hpp  utree_fixture.hpp
benchmark/fixtures/ignore/ignore/: key_value_size_bm.cpp  latency_bw_bm.cpp  reclaim_bm.cpp  recovery_bm.cpp  update_bm.cpp  variable_size_bm.cpp
benchmark/util/: cus_hdr.hpp  perf_event.h
eval/: access_pattern.ipynb  all_ops.ipynb  breakdown.ipynb  breakdown_half.ipynb  common.py  kv_size.ipynb  latency_bw_bm.ipynb  matplot_conf.json  memory.ipynb  reclaim.ipynb  requirements.txt  update.ipynb  var_size.ipynb  viper_versions.ipynb  ycsb.ipynb
include/index/: common_index.hpp
include/index/alex/: alex.h  alex_base.h  alex_multimap.h
include/viper/: cceh.hpp  hash.hpp  viper.hpp
index/: common_index.hpp  dummy_index.hpp
index-test/: CMakeLists.txt  test.cpp
index/ART/: Key.h  N.h  Tree.cpp  art_care.hpp
index/FITing-tree/: btree.h  buffer_index.h  buffer_node.h  inplace_index.h  inplace_node.h  parameters.h  piecewise_linear_model.h  zipfian.h  zipfian_random.h
index/XIndex-H/: helper.h  xindex.h  xindex_buffer.h  xindex_buffer_impl.h  xindex_group.h  xindex_group_impl.h  xindex_impl.h  xindex_model.h  xindex_model_impl.h  xindex_root.h  xindex_root_impl.h  xindex_util.h
index/XIndex-R/: LICENCE  helper.h  xindex.h  xindex_buffer.h  xindex_buffer_impl.h  xindex_group.h  xindex_group_impl.h  xindex_impl.h  xindex_model.h  xindex_model_impl.h  xindex_root.h  xindex_root_impl.h  xindex_util.h
index/alex/: alex.h  alex_fanout_tree.h  alex_map.h  alex_nodes.h
index/bwtree/: bwtree.cpp  bwtree.h  bwtree_care.hpp
index/cuckoo/: cuckoo_care.hpp
index/mass/: mass_care.hpp  mass_node.c  mass_tree.c  mass_tree.h
index/pgm/: pgm_index.hpp  pgm_index_dynamic.hpp
index/rs/: radix_spline.h
index/skiplist/: arena.cc  skiplist.h  skiplist_care.hpp
index/stx/: btree_care.hpp
index/wormhole/: wh.c  wh.h  wormhole_care.hpp
src/: CMakeLists.txt  cceh.hpp  hash.hpp  viper.hpp
